# tether-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SPEC.md  WINDOWS_SUPPORT.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-website.yml  release.yml
fastlane/: Appfile  Fastfile
src/: config.rs  github.rs  lib.rs  main.rs  watcher.rs
src/cli/: mod.rs  output.rs  progress.rs  prompts.rs
src/cli/commands/: collab.rs  config.rs  daemon.rs  diff.rs  history.rs  identity.rs  ignore.rs  init.rs  machines.rs  mod.rs  packages.rs  resolve.rs  restore.rs  status.rs  sync.rs  team.rs  unlock.rs  upgrade.rs
src/daemon/: ipc.rs  mod.rs  pid.rs  server.rs
src/dashboard/: config_edit.rs  mod.rs  state.rs
src/dashboard/widgets/: activity.rs  config.rs  files.rs  help.rs  machines.rs  mod.rs  packages.rs  status.rs
src/security/: encryption.rs  keychain.rs  mod.rs  recipients.rs  secrets.rs
src/sync/: backup.rs  conflict.rs  discovery.rs  engine.rs  git.rs  layers.rs  merge.rs  mod.rs  packages.rs  state.rs  team.rs
website/: Dockerfile  README.md  astro.config.mjs  fly.toml  nginx.conf  package.json  tailwind.config.mjs
website/src/components/: AnimatedTerminal.astro  Code.astro  CodeBlock.astro  FeatureCard.astro  Footer.astro  GitHubStars.astro  InstallCommand.astro  Navbar.astro
website/src/layouts/: BaseLayout.astro  DocsLayout.astro
website/src/pages/: index.astro  security.astro  teams.astro
website/src/pages/docs/: index.astro
website/src/styles/: global.css
