[package]
name = "tether"
version = "1.2.0"
edition = "2021"
authors = ["Paddo Tech"]
description = "Sync your development environment across machines automatically"
homepage = "https://tether-cli.com"
repository = "https://github.com/paddo-tech/tether-cli"
license = "MIT"
rust-version = "1.91"

[[bin]]
name = "tether"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# File watching
notify = "6.1"
notify-debouncer-full = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Git operations
git2 = { version = "0.18", features = ["vendored-openssl"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Interactive CLI
inquire = "0.7"
indicatif = "0.17"
console = "0.15"
owo-colors = "4.1"
comfy-table = "7.1"

# System utilities
home = "0.5"
walkdir = "2.4"
which = "6.0"

# Logging
log = "0.4"
env_logger = "0.11"

# IPC for daemon
interprocess = "2.0"

# Async trait
async-trait = "0.1"

# System info
hostname = "0.4"

# Encryption
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
age = "0.10"

# Secret detection
regex = "1.10"

# Text diffing
similar = "2.6"

# System signals
libc = "0.2"
tempfile = "3.8"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
